# tinyhook

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  meson.build  meson.options  universal.sh
.github/workflows/: c-cpp.yml
docs/: Hooking.md  Memory.md  Objective-C.md  README.md  Symbols.md  _sidebar.md  index.html
include/: tinyhook.h
src/: exhook.c  interpose.c  memory.c  objcrt.c  private.h  search.c  symbol.c  symsolve.c  tinyhook.c
src/arm64/: copyins.c
src/fde64/: fde64.asm  fde64.h  fde64.s
src/skip/: skip.c  skip.h
src/symsolve/: symexport.c  symstub.c  symtable.c
test/: Makefile  README.md  example.c  test.c
test/hook/: Makefile  example.c  main.c
test/objc/: Makefile  example.m  main.m
test/symbol/: resolver.c
tests/: example.c  test.c
